# lena-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  INSTALL.md  README.md  api_server.py  docker-compose.yml  pyproject.toml  requirements.txt  server.py  test_agent.py  test_agent_detailed.py  test_api.py  test_rag_simple.py  test_results.txt
.claude/: settings.local.json
agent/: context7.py  graph.py  rag.py  state.py  tools.py
config/: README.md  lena_api_spec.md
demo/: README.md  __init__.py  index.html  server.py
docs/: README.md  project_x.txt  test_doc.txt
